src/components/Experiment/QuickOutput/Outputs/ObjectDetection/ObjectDetectionImage.scss
@import "../../../../../App.scss";

.object-detection-image {

  &__input-label {
    @include labelSmall;
    color: $charcoalLightest;
  }

  &__image {
    height: auto;
    width: 100%;

  }

  &__overlay {
    position: relative;
  }

  &__overlay-container {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    @include tabletWidth {
    }
  }

  &__input-wrapper {
    background-color: $smoke;
    padding: 12px;
  }

  &__input-container {
    display: flex;
    grid-template-columns: 6fr 1fr;
    align-items: center;
    margin-top: 0px;

    @include desktopWidth {
      grid-template-columns: 2fr 2fr;
    }
    @include tabletWidth {
      grid-template-columns: 4fr 3fr;
    }
    @include mobileWidth-lg {
      grid-template-columns: 2fr 3fr;
    }
  }

  &__input-range {
    height: 3px;
    width: 100%;
    border-color: $gray;

    &:focus {
      border-color: $gray;
    }

    accent-color: $charcoalLightest;

    &::-moz-range-progress {
      background: $charcoalLightest;
    }

    &::-webkit-progress-value {
      background: $charcoalLightest;
    }
  }

  &__input-number {
    @include body;
    width: 52px;
    border: 2px solid $smokeDark;
    padding-left: 12px;
    margin-left: 10px;
    margin-right: 4px;

    -moz-appearance: textfield;
    appearance: textfield;
    -webkit-appearance: textfield;

    &::-webkit-outer-spin-button, &::-webkit-inner-spin-button {
      -webkit-appearance: none;
      margin: 0;
    }

    &-container {
      display: flex;
      align-items: center;
    }
  }
}

